fix for header collapsing

--- a/Styles/header.css
+++ b/Styles/header.css
@@ -1,3 +1,7 @@
+.header{
+    padding-right: 0px;
+    padding-left: 0px;
+}
 .header-navbar{
     margin-top: 25px;
     font-size: 14px;
